Very bad UV "sphere projection" unwrap #103469

Closed
opened 2022-12-25 21:53:47 +01:00 by Juerg · 23 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.95

Blender Version
Broken: version: 3.4.1, branch: blender-v3.4-release, commit date: 2022-12-19 17:00, hash: 55485cb379

Short description of error
When a UV sphere is unwrapped using "sphere projection", the resulting layout doesn't make any sense: The poles create a layout that is very inefficient.
The outcome seems random (If I restart Blender and try again, the results do vary).
The outcome seem to depend on object rotation around Z, but it happens also if a clean file is opened, a UV sphere added, edited and immediately unwrapped, without ANY other operation.

The problem was reported back in 2013 already. It seems to be much better in 2.79 (only one triangle on top/bottom detached, what can be corrected easily), but it is bad to the point that UV layouts are useless {F14092531}in 3.3.0 and the latest version as well.

Exact steps for others to reproduce the error
Start up Blender with a clean file, add a UV sphere, go to front-ortho, edit mode, select all, unwrap-> sphere projection

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.95 **Blender Version** Broken: version: 3.4.1, branch: blender-v3.4-release, commit date: 2022-12-19 17:00, hash: `55485cb379` **Short description of error** When a UV sphere is unwrapped using "sphere projection", the resulting layout doesn't make any sense: The poles create a layout that is very inefficient. The outcome seems random (If I restart Blender and try again, the results do vary). The outcome seem to depend on object rotation around Z, but it happens also if a clean file is opened, a UV sphere added, edited and immediately unwrapped, without ANY other operation. The problem was reported back in 2013 already. It seems to be much better in 2.79 (only one triangle on top/bottom detached, what can be corrected easily), but it is bad to the point that UV layouts are useless {[F14092531](https://archive.blender.org/developer/F14092531/BugReport.blend)}in 3.3.0 and the latest version as well. **Exact steps for others to reproduce the error** Start up Blender with a clean file, add a UV sphere, go to front-ortho, edit mode, select all, unwrap-> sphere projection
Author

Added subscriber: @Fantasmo

Added subscriber: @Fantasmo
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @Chris_Blackbourn

Added subscriber: @Chris_Blackbourn
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Chris Blackbourn self-assigned this 2022-12-26 08:01:51 +01:00

Confirmed in debugger.

Confirmed in debugger.
Author

Additional comment: The same problem seems to exist with sphere projection.

Additional comment: The same problem seems to exist with sphere projection.

In #103469#1465866, @Fantasmo wrote:
Additional comment: The same problem seems to exist with sphere projection.

Hi @Fantasmo. I'm not seeing the distinction. Can you add some more detail?

> In #103469#1465866, @Fantasmo wrote: > Additional comment: The same problem seems to exist with sphere projection. Hi @Fantasmo. I'm not seeing the distinction. Can you add some more detail?

Possible fix: D16869

p.s. I could also add an option to either "Pinch" (current behavior) or "Fan" (i.e. the default UV Sphere) the poles. Not sure if that would be here, or if that would go through right-click-select ?

Possible fix: [D16869](https://archive.blender.org/developer/D16869) p.s. I could also add an option to either "Pinch" (current behavior) or "Fan" (i.e. the default UV Sphere) the poles. Not sure if that would be here, or if that would go through right-click-select ?
Author

In #103469#1466004, @Chris_Blackbourn wrote:

In #103469#1465866, @Fantasmo wrote:
Additional comment: The same problem seems to exist with sphere projection.

Hi @Fantasmo. I'm not seeing the distinction. Can you add some more detail?

There is no distinction between the sphere projection and the cylinder projection, both show the same erratic behavior.
I wanted to make sure that the cylinder projection is checked as well, while you are at it, as it possibly needs the same fix.

> In #103469#1466004, @Chris_Blackbourn wrote: >> In #103469#1465866, @Fantasmo wrote: >> Additional comment: The same problem seems to exist with sphere projection. > > Hi @Fantasmo. I'm not seeing the distinction. Can you add some more detail? There is no distinction between the sphere projection and the cylinder projection, both show the same erratic behavior. I wanted to make sure that the cylinder projection is checked as well, while you are at it, as it possibly needs the same fix.
Author

In #103469#1466017, @Chris_Blackbourn wrote:
Possible fix: D16869

p.s. I could also add an option to either "Pinch" (current behavior) or "Fan" (i.e. the default UV Sphere) the poles. Not sure if that would be here, or if that would go through right-click-select ?

"Fan" imho. makes the better UV layout.

> In #103469#1466017, @Chris_Blackbourn wrote: > Possible fix: [D16869](https://archive.blender.org/developer/D16869) > > p.s. I could also add an option to either "Pinch" (current behavior) or "Fan" (i.e. the default UV Sphere) the poles. Not sure if that would be here, or if that would go through right-click-select ? "Fan" imho. makes the better UV layout.

Ah, good spotting! Have patched Cylinder project as well as added a "Fan" option.

Let us know if you need a sneak-build for testing...

Ah, good spotting! Have patched Cylinder project as well as added a "Fan" option. Let us know if you need a sneak-build for testing...
Author

No sneak-build needed, thank you.
I am confident that you guys have that under control and will have a look at the next official release.
Thanks for all what you are doing!

No sneak-build needed, thank you. I am confident that you guys have that under control and will have a look at the next official release. Thanks for all what you are doing!
Author

A final question though? Does the new solution respect existing marked seams? This would be great!

A final question though? Does the new solution respect existing marked seams? This would be great!

In #103469#1468719, @Fantasmo wrote:
A final question though? Does the new solution respect existing marked seams? This would be great!

I don't quite see how the existing seams would change the layout. Both the sphere and cylinder projection specify the UVs everywhere except the poles.

Perhaps you could mock-up a screenshot of a with/with-out seams layout?

> In #103469#1468719, @Fantasmo wrote: > A final question though? Does the new solution respect existing marked seams? This would be great! I don't quite see how the existing seams would change the layout. Both the sphere and cylinder projection specify the UVs everywhere except the poles. Perhaps you could mock-up a screenshot of a with/with-out seams layout?
Author

Its not about changing the layout, only "where the unwrap starts".
Currently, the default sphere unwrap "starts" at the backside of the sphere and wraps around it, completely ignoring seams.
In 3D modelling we want to control the seam location however, as there often are texture artefacts. So the ideal location may be elsewhere than the backside.

So it would be nice if the unwrap would start at that seam and not the backside of the sphere / cylinder, like the default unwrap that has not seams to rely on.

Granted, I can identify the location of the map edge and rotate the object, to move the "invisible" seam where I need it, but this is counter-intuitive and merely a workaround.
It would be better if the unwrap started at the seam, if there is a "pole to pole"-seam.

Its not about changing the layout, only "where the unwrap starts". Currently, the default sphere unwrap "starts" at the backside of the sphere and wraps around it, completely ignoring seams. In 3D modelling we want to control the seam location however, as there often are texture artefacts. So the ideal location may be elsewhere than the backside. So it would be nice if the unwrap would start at that seam and not the backside of the sphere / cylinder, like the default unwrap that has not seams to rely on. Granted, I can identify the location of the map edge and rotate the object, to move the "invisible" seam where I need it, but this is counter-intuitive and merely a workaround. It would be better if the unwrap started at the seam, if there is a "pole to pole"-seam.
Author

Blender Unwrap.png

![Blender Unwrap.png](https://archive.blender.org/developer/F14114064/Blender_Unwrap.png)
Author

Users are used to the following workstream:

  1. Create a seam where you want it
  2. Select the part of the mesh that needs UV unwrap
  3. Unwrap it
Users are used to the following workstream: 1. Create a seam where you want it 2. Select the part of the mesh that needs UV unwrap 3. Unwrap it

Wow, that's a fascinating idea.

Such a thing should be possible, however the code change is a little non-obvious.

Just as a procedural matter, I might get the current fix committed (which will close the task), and then investigate an extension to respect seams.

Wow, that's a fascinating idea. Such a thing should be possible, however the code change is a little non-obvious. Just as a procedural matter, I might get the current fix committed (which will close the task), and then investigate an extension to respect seams.

This issue was referenced by 280502e630

This issue was referenced by 280502e630e99a6723861a9cae156fabd53a7eb1

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Resolved' to: 'Needs Developer To Reproduce'

Changed status from 'Resolved' to: 'Needs Developer To Reproduce'

Reopen to see if "Seam" unwrap is possible.

Reopen to see if "Seam" unwrap is possible.
Blender Bot added
Status
Resolved
and removed
Status
Needs Info from Developers
labels 2023-03-02 00:48:50 +01:00

Heyas @Fantasmo !

Seam support is now in main and will most likely be in the next nightly build.

Would you be able to download the next nightly when it becomes available and confirm if everything is working correctly for both UV Sphere Project and UV Cylinder Project?

Thanks!

Heyas @Fantasmo ! Seam support is now in `main` and will most likely be in the next nightly build. Would you be able to download the next nightly when it becomes available and confirm if everything is working correctly for both UV Sphere Project and UV Cylinder Project? Thanks!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#103469
No description provided.